# BrickGamePlus

./: CMakeLists.txt  Makefile  README.md
brick_game/common/: common_class.h  common_types.h
brick_game/snake/model/: apple.cc  model.h  snake.cc  snake.h
brick_game/snake/model/include/: model.h  snake.h
brick_game/snake/model/src/: apple.cc  game_field.cc  snake.cc
brick_game/tetris/model/: tetris.c  tetris.h
brick_game/tetris/model/include/: extern_model.h  model.h
brick_game/tetris/model/src/: extern_tetris.cc  tetris.c  tetris.cc
controller/: controller.cc  controller.h
gui/cli/: main_cli.cc
gui/cli/cli_views/: view.cc  view.h
gui/desktop/desktop_views/: view.h
